# othello_complexity_rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
research/: valid100.txt
result/: reverse_NG.txt  reverse_OK.txt  reverse_UNKNOWN.txt
result/random_board/: result30.txt  result_6x6_n0_c1000.txt  result_n0_c10000.txt  result_n0_c50.txt  result_n10_c50.txt  result_n20_c50.txt  result_n30_c50.txt  result_n40_c50.txt  result_n50_c50.txt  result_n60_c50.txt
result/random_play/: result20.txt  result20_6x6.txt  result21.txt  result21_6x6.txt  result22.txt  result22_6x6.txt  result23.txt  result23_6x6.txt  result24.txt  result24_6x6.txt  result25.txt  result25_6x6.txt  result26.txt  result26_6x6.txt  result27.txt  result27_6x6.txt  result28.txt  result28_6x6.txt  result29.txt  result29_6x6.txt  result30.txt  result30_6x6.txt  result31.txt  result31_6x6.txt  result32.txt  result32_6x6.txt  result33.txt  result34.txt  result35.txt  result36.txt  result37.txt  result38.txt  result39.txt  result40.txt  result41.txt  result42.txt  result43.txt  result44.txt  result45.txt  result46.txt  (+14 more)
result/result_gpw2025/: con_NG.txt  ip_NG.txt  ip_OK.txt  occupancy_OK.txt  occupancy_OK_explainable.txt  reverse_NG.txt  reverse_UNKNOWN.txt  sat_NG.txt  sat_OK.txt  seg3more_NG.txt  seg3more_OK.txt
result/result_gpw2025_eabstract/: reverse_NG.txt  reverse_OK.txt  reverse_UNKNOWN.txt
scripts/: plot_cnf_counts.py  run_reverse_to_initial.sh  stone_stats.py  stone_stats_markdown.py
src/: gen_rand_fens.rs  io.rs  lib.rs  main.rs  othello.rs  prunings.rs  random_play.rs  search.rs
src/lib/: bfs_search.rs  check_lp.rs  check_occupancy.rs  io.rs  othello.rs  par_search.rs  par_search1.rs  reverse_common.rs  reverse_search.rs  search.rs  search_fwd_par.rs  solve_kissat.rs
src/prunings/: check_con.rs  check_lp.rs  check_occupancy.rs  (+6 more)
(+128 files in other folders)
