[package]
name = "othello_complexity_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
proconio = "0.4.5"
ac-library-rs = "0.1.1"
rustsat-kissat = "0.7.2"
rustsat = "0.7"
rand = "0.9.2"

[[bin]]
name = "gen_rand_fens"
path = "src/gen_rand_fens.rs"

[[bin]]
name = "random_play"
path = "src/random_play.rs"

