[package]
name = "othello_complexity_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
proconio = "0.4.5"
ac-library-rs = "0.1.1"
rustsat-kissat = "0.7.2"
rustsat = "0.7"
rand = "0.9.2"
rayon = "1.10"
dashmap = "6"
clap = { version = "4", features = ["derive"] }
bytemuck= "1.23.2"

[profile.dev]
panic = "unwind"