[package]
name = "othello_complexity_rs"
version = "1.0.0"
edition = "2021"

[dependencies]
proconio = "0.4.5"
ac-library-rs = "0.1.1"
rustsat-kissat = "0.7.2"
rustsat = "0.7"
rand = "0.9.2"
rayon = "1.10"
dashmap = "6"
clap = { version = "4", features = ["derive"] }
bytemuck= "1.23.2"
statrs = "0.18.0"
bigdecimal = "0.4"
highs = "1"
highs-sys = "1"
crossbeam-skiplist = "0.1"
crossbeam = "0.8"
ordered-float = "4"
flurry = "0.5"

[[bin]]
name = "reverse_to_initial"
path = "src/bin/reverse_to_initial/main.rs"

[[bin]]
name = "reverse_to_initial_bfs"
path = "src/bin/reverse_to_initial/bfs.rs"

[[bin]]
name = "reverse_to_initial_bfs_par"
path = "src/bin/reverse_to_initial/bfs_par.rs"

[[bin]]
name = "reverse_to_initial_dfs_par"
path = "src/bin/reverse_to_initial/dfs_par.rs"

[[bin]]
name = "reverse_to_initial_gbfs_par"
path = "src/bin/reverse_to_initial/gbfs_par.rs"

[[bin]]
name = "reverse_to_initial_move_ordering"
path = "src/bin/reverse_to_initial/move_ordering.rs"

[[bin]]
name = "check"
path = "src/bin/check.rs"

[profile.dev]
panic = "unwind"
